--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.4.7",
     "@react-navigation/material-bottom-tabs": "^5.2.7",
-    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.2.7",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
@@ -22,6 +22,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
