--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Be The Hero",
+    "name": "Trade Land",
     "slug": "bethehero",
     "privacy": "public",
     "sdkVersion": "36.0.0",
