--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "nodemon src/server.js --host 192.168.58.218 --port 8888",
     "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
