--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-image-picker": "^2.3.1",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.4.0",
