--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,8 +15,11 @@
     "@react-navigation/stack": "^5.2.7",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-camera": "~8.0.0",
     "expo-constants": "^9.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-mail-composer": "^8.0.0",
+    "expo-media-library": "~8.0.0",
     "intl": "^1.2.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -24,6 +27,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-image-picker": "^2.3.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.4.0",
