--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^2.0.0",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-image-zoom-viewer": "^3.0.1",
