--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "knex": "^0.20.13",
+    "knex": "^0.20.15",
+    "mysql": "^2.18.1",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
