--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "expo-mail-composer": "^8.0.0",
     "expo-media-library": "~8.0.0",
     "intl": "^1.2.5",
+    "moment": "^2.27.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
