--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "expo-camera": "~8.0.0",
     "expo-constants": "^9.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
     "expo-mail-composer": "^8.0.0",
     "expo-media-library": "~8.0.0",
     "intl": "^1.2.5",
